# cyptro_trader

./: .gitignore  readme.md
docker-compose/: Makefile  backfill_pipeline.yml  feature_pipeline.yml
services/kafka_to_feature_store/: Dockerfile  Makefile  pyproject.toml
services/kafka_to_feature_store/src/: config.py  hopsworks_api.py  main.py
services/trade_producer/: Dockerfile  Makefile  pyproject.toml
services/trade_producer/src/: Makefile  config.py  kraken_api.py  main.py
services/trade_producer/src/kraken_api/: rest_api.py  websocket_api.py
services/trade_to_ohlc/: Dockerfile  Makefile  pyproject.toml
services/trade_to_ohlc/src/: config.py  main.py
