[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["John Doe <napat.asawa0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
widgetsnbextension = "^4.0.13"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
quixstreams = "^2.10.0"
hopsworks = "3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
